Fix image stretching issue in bio pop-up boxes (#24)

--- a/src/App.css
+++ b/src/App.css
@@ -612,6 +612,8 @@
 
 .WhoWeAreProfiles__selectedProfileImage {
   filter: grayscale(100%);
+  width: 250px;
+  height: 300px;
   margin-right: 30px;
 }
 
